# RPO

./: README.md
Lab1/fclient/app/: build.gradle.kts
Lab1/fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Lab1/fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
Lab1/fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
Lab1/fclient/app/src/main/res/values/: padbutton.xml  themes.xml
Lab1/fclient/gradle/: libs.versions.toml
Lab1/fclient/gradle/wrapper/: gradle-wrapper.properties
